<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="app_name">the Bitemap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mlgb">mlgb</string>
    <string name="splash_prompt">getting things ready...</string>
    <string name="menu_schedules_title">Schedules</string>
    <string name="menu_all_trucks">All foodtrucks</string>
    <string name="menu_about">About</string>
    <string name="menu_category">Category</string>
    <string name="menu_clear_debug_db">Clear DebugDB</string>
    <string name="map">map</string>
    <string name="no_schedules">oops, no events found!</string>
    <string name="upcomming_schedules">Schedules</string>
    <string name="gallery">Gallery</string>
    <string name="see_all">see all</string>
    <string name="date">Date</string>
    <string name="menu_use_icon_prev">Use Icon</string>
    <string name="feedback">Feedback</string>
    <string name="tell_us">   Tell us what you think!</string>
    <string name="name">name:  </string>
    <string name="email">email:  </string>
    <string name="comments">comments:  </string>
    <string name="submit">submit</string>
    <string name="how_context">The Food Trucks schedules are collected by both our automatic food
        trucks radar system and ourselves manullay, food truck enthusiasts!
    </string>
    <string name="how_title">How does the BiteMap collect infomations</string>
    <string name="what_context">the BiteMap is a Food Truck Map that allows you to plan your next
        bite. We know you love food trucks.
    </string>
    <string name="what_title">What is the BiteMap</string>
    <string name="version">the Bitemap v0.9</string>
    <string name="google_maps_key">AIzaSyBLsH21NkHeNI24Pur-fK1WBUiRKSHOoE4</string>

</resources>
