<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/what_title" android:text="@string/what_title"
              android:textSize="30dp" android:layout_margin="10dp"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/what_context" android:text="@string/what_context"
              android:textSize="20dp" android:layout_margin="10dp"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/how_title" android:text="@string/how_title" android:textSize="30dp"
              android:layout_marginTop="40dp" android:layout_marginLeft="10dp"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/how_context" android:text="@string/how_context"
              android:textSize="20dp" android:layout_margin="10dp"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/feedback" android:layout_gravity="right"
            android:layout_marginRight="40dp" android:layout_marginTop="30dp" android:onClick="sendfeedback"/>
</LinearLayout>