<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/tell_us" android:textSize="30dp"
              android:layout_marginTop="40dp" android:layout_marginBottom="40dp"
              android:layout_marginLeft="20dp"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:layout_margin="5dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/name" android:layout_marginLeft="5dp"/>
        <EditText android:id="@+id/name" android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:layout_margin="5dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/email" android:layout_marginLeft="5dp"/>
        <EditText android:id="@+id/email" android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:orientation="vertical"
                  android:layout_marginTop="20dp" android:layout_marginLeft="5dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/comments" android:layout_marginLeft="5dp"/>
        <EditText android:id="@+id/comments" android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:lines="3"/>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" android:id="@+id/submit"
                android:text="@string/submit" android:onClick="submit"/>
    </LinearLayout>
</LinearLayout>